Populate alt text for works from thumbnail object. Change accessCopiesService methods to work with object records and set alt text